--- a/upload-server/configs/local/deliver.yml
+++ b/upload-server/configs/local/deliver.yml
@@ -1,28 +1,32 @@
 version: 1.0
 
 targets:
-  - name: edav
+  edav:
+    name: edav
     type: az-blob
     endpoint: $EDAV_ENDPOINT
     container_name: $EDAV_CHECKPOINT_CONTAINER_NAME
     tenant_id: $EDAV_TENANT_ID
     client_id: $EDAV_CLIENT_ID
     client_secret: $EDAV_CLIENT_SECRET
-  - name: ehdi
+  ehdi:
+    name: ehdi
     type: az-blob
     endpoint: $EHDI_ENDPOINT
     container_name: $EHDI_CHECKPOINT_CONTAINER_NAME
     tenant_id: $EHDI_TENANT_ID
     client_id: $EHDI_CLIENT_ID
     client_secret: $EHDI_CLIENT_SECRET
-  - name: eicr
+  eicr:
+    name: eicr
     type: az-blob
     endpoint: $EICR_ENDPOINT
     container_name: $EICR_CHECKPOINT_CONTAINER_NAME
     tenant_id: $EICR_TENANT_ID
     client_id: $EICR_CLIENT_ID
     client_secret: $EICR_CLIENT_SECRET
-  - name: ncird
+  ncird:
+    name: ncird
     type: az-blob
     endpoint: $NCIRD_ENDPOINT
     container_name: $NCIRD_CHECKPOINT_CONTAINER_NAME
