--- a/upload-server/configs/testing/file_destinations.yml
+++ b/upload-server/configs/testing/file_destinations.yml
@@ -1,96 +1,60 @@
 version: 1.0
 
-az-edav: &az-edav
-  endpoint: "http://azurite:10000/devstoreaccount1"
-  storage_account: "devstoreaccount1"
-  storage_key: $AZURITE_KEY
-  container_name: edav
+targets:
+  edav:
+    name: edav
+    type: file
+    path: ./uploads/edav
+  ehdi:
+    name: ehdi
+    type: file
+    path: ./uploads/ehdi
+  eicr:
+    name: eicr
+    type: file
+    path: ./uploads/eicr
+  ncird:
+    name: ncird
+    type: file
+    path: ./uploads/ncird
 
-az-ehdi: &az-ehdi
-  endpoint: "http://azurite:10000/devstoreaccount1"
-  storage_account: "devstoreaccount1"
-  storage_key: $AZURITE_KEY
-  container_name: ehdi
-
-az-eicr: &az-eicr
-  endpoint: "http://azurite:10000/devstoreaccount1"
-  storage_account: "devstoreaccount1"
-  storage_key: $AZURITE_KEY
-  container_name: eicr
-
-az-ncird: &az-ncird
-  endpoint: "http://azurite:10000/devstoreaccount1"
-  storage_account: "devstoreaccount1"
-  storage_key: $AZURITE_KEY
-  container_name: ncird
-
-# if needed, properties of an anchor can be overridden
-# in a delivery target
-#
-# path_template can be defined at data_stream level
-# where it is valid for all targets unless
-# a target defines its own path_template property
-programs:
+routing_groups:
   - data_stream_id: pulsenet
     data_stream_route: localsequencefile
     delivery_targets:
       - name: edav
-        type: file
-        path: ./uploads/edav
   - data_stream_id: ehdi
     data_stream_route: csv
     delivery_targets:
       - name: ehdi
-        type: file
-        path: ./uploads/ehdi
   - data_stream_id: eicr
     data_stream_route: fhir
     delivery_targets:
       - name: eicr
-        type: file
-        path: ./uploads/eicr
   - data_stream_id: rsp-prevention
     data_stream_route: csv
     delivery_targets:
       - name: ncird
-        type: file
-        path: ./uploads/ncird
   - data_stream_id: generic-immunization
     data_stream_route: csv
     delivery_targets:
       - name: ncird
-        type: file
-        path: ./uploads/ncird
   - data_stream_id: influenza-vaccination
     data_stream_route: csv
     delivery_targets:
       - name: ncird
-        type: file
-        path: ./uploads/ncird
   - data_stream_id: routine-immunization
     data_stream_route: other
     delivery_targets:
       - name: ncird
-        type: file
-        path: ./uploads/ncird
   - data_stream_id: rsp-prevention
     data_stream_route: csv
     delivery_targets:
       - name: ncird
-        type: file
-        path: ./uploads/ncird
   - data_stream_id: dextesting
     data_stream_route: testevent1
     delivery_targets:
       - name: ncird
-        type: file
-        path: ./uploads/ncird
       - name: eicr
-        type: file
-        path: ./uploads/eicr
       - name: edav
-        type: file
-        path: ./uploads/edav
       - name: ehdi
-        type: file
-        path: ./uploads/ehdi
