--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Show coverage
         run: go tool cover -func=c.out
   e2e-tests-fs:
-    name: E2E Tests - File System Storage
+    name: E2E Tests - File System Storage to File System Destinations
     uses: ./.github/workflows/e2e-test-template.yml
     with:
       TEST_TITLE: E2E FS Tests
@@ -53,7 +53,7 @@ jobs:
       COMPOSE_FILENAME: ./docker-compose.e2e.yml
     secrets: inherit
   e2e-tests-azure:
-    name: E2E Tests - Azure Blob Storage
+    name: E2E Tests - Azure Blob Storage to Azure Blob Destinations
     uses: ./.github/workflows/e2e-test-template.yml
     with:
       TEST_TITLE: E2E Azure Tests
@@ -61,12 +61,20 @@ jobs:
       STORAGE_TYPE: azure
     secrets: inherit
   e2e-tests-aws:
-    name: E2E Tests - AWS S3 Storage
+    name: E2E Tests - AWS S3 Storage to AWS S3 Destinations
     uses: ./.github/workflows/e2e-test-template.yml
     with:
       TEST_TITLE: E2E AWS Tests
       COMPOSE_FILENAME: ./docker-compose.e2e.minio.yml
       STORAGE_TYPE: aws
+    secrets: inherit
+  e2e-tests-mix:
+    name: E2E Tests - File System Storage to Azure Blob and AWS S3 Destinations
+    uses: ./.github/workflows/e2e-test-template.yml
+    with:
+      TEST_TITLE: E2E Mix Tests
+      COMPOSE_FILENAME: ./docker-compose.e2e.all.yml
+      STORAGE_TYPE: all
     secrets: inherit
   run-fortify-scan:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
