--- a/upload-server/configs/testing/azurite_destinations.yml
+++ b/upload-server/configs/testing/azurite_destinations.yml
@@ -8,6 +8,7 @@ targets:
     storage_account: 'devstoreaccount1'
     storage_key: $AZURITE_KEY
     container_name: edav
+    path_template: $EDAV_PATH_TEMPLATE
   ehdi:
     name: ehdi
     type: az-blob
@@ -15,6 +16,7 @@ targets:
     storage_account: 'devstoreaccount1'
     storage_key: $AZURITE_KEY
     container_name: ehdi
+    path_template: $EHDI_PATH_TEMPLATE
   eicr:
     name: eicr
     type: az-blob
@@ -22,6 +24,7 @@ targets:
     storage_account: 'devstoreaccount1'
     storage_key: $AZURITE_KEY
     container_name: eicr
+    path_template: $EICR_PATH_TEMPLATE
   ncird:
     name: ncird
     type: az-blob
@@ -29,6 +32,7 @@ targets:
     storage_account: 'devstoreaccount1'
     storage_key: $AZURITE_KEY
     container_name: ncird
+    path_template: $NCIRD_PATH_TEMPLATE
 routing_groups:
   - data_stream_id: pulsenet
     data_stream_route: localsequencefile
@@ -38,12 +42,10 @@ routing_groups:
     data_stream_route: csv
     delivery_targets:
       - name: ehdi
-        path_template: $EHDI_PATH_TEMPLATE
   - data_stream_id: eicr
     data_stream_route: fhir
     delivery_targets:
       - name: eicr
-        path_template: $EICR_PATH_TEMPLATE
   - data_stream_id: covid-all-monthly-vaccination
     data_stream_route: csv
     delivery_targets:
