--- a/upload-server/configs/testing/mix_destinations.yml
+++ b/upload-server/configs/testing/mix_destinations.yml
@@ -36,6 +36,7 @@ routing_groups:
     data_stream_route: localsequencefile
     delivery_targets:
       - name: edav
+        path_template: "{{.Filename}}"
   - data_stream_id: ehdi
     data_stream_route: csv
     delivery_targets:
