--- a/upload-server/configs/testing/mix_destinations.yml
+++ b/upload-server/configs/testing/mix_destinations.yml
@@ -36,7 +36,7 @@ routing_groups:
     data_stream_route: localsequencefile
     delivery_targets:
       - name: edav
-        path_template: "{{.Filename}}"
+        path_template: "{{.DataStreamID}}/{{.DataStreamRoute}}/{{.Filename}}"
   - data_stream_id: ehdi
     data_stream_route: csv
     delivery_targets:
@@ -71,6 +71,10 @@ routing_groups:
     data_stream_route: testevent1
     delivery_targets:
       - name: ncird
+        pathTemplate: "{{.Year}}/{{.Month}}/{{.Day}}/{{.Filename}}_{{.UploadId}}"
       - name: eicr
+        pathTemplate: "{{.Year}}/{{.Month}}/{{.Day}}/{{.Filename}}_{{.UploadId}}"
       - name: edav
+        pathTemplate: "{{.Year}}/{{.Month}}/{{.Day}}/{{.Filename}}_{{.UploadId}}"
       - name: ehdi
+        pathTemplate: "{{.Year}}/{{.Month}}/{{.Day}}/{{.Filename}}_{{.UploadId}}"
