--- a/upload-server/testing/delivery.yml
+++ b/upload-server/testing/delivery.yml
@@ -32,6 +32,7 @@ routing_groups:
     data_stream_route: fhir
     delivery_targets:
       - name: eicr
+        path_template: "{{.UploadId}}"
   - data_stream_id: rsp-prevention
     data_stream_route: csv
     delivery_targets:
@@ -56,10 +57,10 @@ routing_groups:
     data_stream_route: testevent1
     delivery_targets:
       - name: ncird
-        path_template: "{{.Year}}/{{.Month}}/{{.Day}}/{{.Filename}}_{{.UploadId}}"
+        path_template: "{{.UploadId}}"
       - name: eicr
-        path_template: "{{.Year}}/{{.Month}}/{{.Day}}/{{.Filename}}_{{.UploadId}}"
+        path_template: "{{.UploadId}}"
       - name: edav
-        path_template: "{{.Year}}/{{.Month}}/{{.Day}}/{{.Filename}}_{{.UploadId}}"
+        path_template: "{{.UploadId}}"
       - name: ehdi
-        path_template: "{{.Year}}/{{.Month}}/{{.Day}}/{{.Filename}}_{{.UploadId}}"
+        path_template: "{{.UploadId}}"
