--- a/upload-server/configs/local/deliver.yml
+++ b/upload-server/configs/local/deliver.yml
@@ -39,6 +39,7 @@ routing_groups:
     data_stream_route: localsequencefile
     delivery_targets:
       - name: edav
+        path_template: "{{.DataStreamID}}-{{.DataStreamRoute}}/{{.Filename}}"
   - data_stream_id: ehdi
     data_stream_route: csv
     delivery_targets:
@@ -75,8 +76,10 @@ routing_groups:
     data_stream_route: testevent1
     delivery_targets:
       - name: ncird
+        path_template: "phdo-testing/{{.Year}}/{{.Month}}/{{.Day}}/{{.Filename}}_{{.UploadId}}"
       - name: eicr
-        path_template: $EICR_PATH_TEMPLATE
+        path_template: "phdo-testing/{{.Year}}/{{.Month}}/{{.Day}}/{{.Filename}}_{{.UploadId}}"
       - name: ehdi
-        path_template: $EHDI_PATH_TEMPLATE
+        path_template: "phdo-testing/{{.Year}}/{{.Month}}/{{.Day}}/{{.Filename}}_{{.UploadId}}"
       - name: edav
+        path_template: "phdo-testing/{{.Year}}/{{.Month}}/{{.Day}}/{{.Filename}}_{{.UploadId}}"
