--- a/upload-server/testing/delivery.yml
+++ b/upload-server/testing/delivery.yml
@@ -23,6 +23,7 @@ routing_groups:
     data_stream_route: localsequencefile
     delivery_targets:
       - name: edav
+        path_template: "{{.DataStreamID}}/{{.DataStreamRoute}}/{{.Filename}}"
   - data_stream_id: ehdi
     data_stream_route: csv
     delivery_targets:
@@ -31,6 +32,7 @@ routing_groups:
     data_stream_route: fhir
     delivery_targets:
       - name: eicr
+        path_template: "{{.UploadId}}"
   - data_stream_id: rsp-prevention
     data_stream_route: csv
     delivery_targets:
@@ -55,6 +57,10 @@ routing_groups:
     data_stream_route: testevent1
     delivery_targets:
       - name: ncird
+        path_template: "{{.UploadId}}"
       - name: eicr
+        path_template: "{{.UploadId}}"
       - name: edav
+        path_template: "{{.UploadId}}"
       - name: ehdi
+        path_template: "{{.UploadId}}"
