--- a/upload-server/docker-compose.e2e.all.yml
+++ b/upload-server/docker-compose.e2e.all.yml
@@ -28,10 +28,6 @@ services:
       - UPLOAD_CONFIG_PATH=/upload-configs
       - DEX_DELIVERY_CONFIG_FILE=/code/configs/testing/e2e/mix_destinations.yml
       - AZURITE_KEY=${AZURITE_STORAGE_KEY}
-      - EDAV_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
-      - EHDI_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
-      - EICR_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
-      - NCIRD_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
     command: /bin/sh -c "./run-server.sh"
     networks:
       - e2e-all-network
@@ -49,7 +45,8 @@ services:
       - CI
       - SERVER_URL=http://upload-server-all:8080
       - UI_URL=http://upload-server-all:8081
-      - TEST_REPORT_JSON=${TEST_REPORT_JSON:-all-test-report.json}
+      - TEST_REPORTS_DIR=${TEST_REPORTS_DIR:-/playwright/test-reports/fs-to-azure-and-aws/}
+      - TEST_RESULTS_DIR=${TEST_RESULTS_DIR:-/playwright/test-results/fs-to-azure-and-aws/}
     command: npm run test:docker
     networks:
       - e2e-all-network
