--- a/upload-server/docker-compose.e2e.minio-azurite.yml
+++ b/upload-server/docker-compose.e2e.minio-azurite.yml
@@ -33,10 +33,6 @@ services:
       - DEX_MANIFEST_CONFIG_FOLDER_NAME=upload-configs
       - DEX_DELIVERY_CONFIG_FILE=/code/configs/testing/e2e/azurite_destinations.yml
       - AZURITE_KEY=${AZURITE_STORAGE_KEY}
-      - EDAV_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
-      - EHDI_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
-      - EICR_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
-      - NCIRD_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
     command: /bin/sh -c "./run-server.sh"
     networks:
       - e2e-minio-azurite-network
@@ -54,7 +50,8 @@ services:
       - CI
       - SERVER_URL=http://upload-server-minio-azurite:8080
       - UI_URL=http://upload-server-minio-azurite:8081
-      - TEST_REPORT_JSON=${TEST_REPORT_JSON:-all-test-report.json}
+      - TEST_REPORTS_DIR=${TEST_REPORTS_DIR:-/playwright/test-reports/aws-to-azure/}
+      - TEST_RESULTS_DIR=${TEST_RESULTS_DIR:-/playwright/test-results/aws-to-azure/}
     command: npm run test:docker
     networks:
       - e2e-minio-azurite-network
