--- a/.github/workflows/swagger-docs-gh-pages.yml
+++ b/.github/workflows/swagger-docs-gh-pages.yml
@@ -1,11 +1,15 @@
 name: Deploy Swagger docs with GitHub Pages dependencies preinstalled
 
 on:
-  push:
-    # branches: ['main']
-    branches: ['UPLOAD-1825/playwright-ghpages']
-
   workflow_dispatch:
+  # push:
+    # branches: ['main']
+  push:
+    branches: 
+      - 'UPLOAD-1825/playwright-ghpages'
+    paths:
+      - docs/**
+
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -15,9 +19,9 @@ permissions:
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: 'pages'
-  cancel-in-progress: false
+# concurrency:
+#   group: 'pages'
+#   cancel-in-progress: false
 
 jobs:
   # Build job
