--- a/.github/workflows/deploy-to-ghpages.yml
+++ b/.github/workflows/deploy-to-ghpages.yml
@@ -26,7 +26,7 @@ permissions:
 #   cancel-in-progress: false
 
 jobs:
-  deploy:
+  deploy-to-ghpages:
     environment:
       name: github-pages
       url: https://cdcgov.github.io/data-exchange-upload/
