--- a/.github/workflows/swagger-docs-gh-pages.yml
+++ b/.github/workflows/swagger-docs-gh-pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Swagger docs with GitHub Pages dependencies preinstalled
+name: Deploy Swagger docs with GitHub Pages
 
 on:
   workflow_dispatch:
