--- a/.github/workflows/push-to-gh-pages.yml
+++ b/.github/workflows/push-to-gh-pages.yml
@@ -14,10 +14,10 @@ on:
         required: true
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: write
-  pages: write
-  id-token: write
+# permissions:
+#   contents: write
+#   pages: write
+#   id-token: write
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
@@ -26,10 +26,7 @@ permissions:
 #   cancel-in-progress: false
 
 jobs:
-  deploy-to-ghpages:
-    environment:
-      name: github-pages
-      url: https://cdcgov.github.io/data-exchange-upload/
+  push-to-ghpages:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout GitHub Pages Branch
@@ -42,10 +39,10 @@ jobs:
           name: ${{ inputs.ARTIFACT_ID }}
           path: ${{ inputs.DEPLOY_TO }}
       - name: Push Swagger Docs
-        working-directory: ${{ inputs.DEPLOY_TO }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add .
+          git add ${{ inputs.DEPLOY_TO }}
           git commit -m "${{ inputs.COMMIT_MSG }}"
           git push
+
