--- a/.github/workflows/swagger-docs-gh-pages.yml
+++ b/.github/workflows/swagger-docs-gh-pages.yml
@@ -2,29 +2,13 @@ name: Deploy Swagger docs with GitHub Pages
 
 on:
   workflow_dispatch:
-  # push:
-    # branches: ['main']
   push:
     branches: 
-      - 'UPLOAD-1825/playwright-ghpages'
+      - main
     paths:
       - docs/**
 
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-# permissions:
-#   contents: write
-#   pages: write
-#   id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-# concurrency:
-#   group: 'pages'
-#   cancel-in-progress: false
-
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
