fixed secret inheritance

--- a/.github/workflows/e2e-test-run-template.yml
+++ b/.github/workflows/e2e-test-run-template.yml
@@ -19,6 +19,7 @@ defaults:
 
 jobs:
   run-tests:
+    name: ${{ inputs.TEST_TITLE }}
     runs-on: ubuntu-latest
     continue-on-error: true
     env:
