--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -48,6 +48,7 @@ jobs:
   e2e-tests:
     name: Playwright Tests
     uses: ./.github/workflows/e2e-tests.yml
+    secrets: inherit
   run-fortify-scan:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
