--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -48,11 +48,22 @@ jobs:
       TEST_TITLE: E2E AWS to Azure Tests
       COMPOSE_FILENAME: ./docker-compose.e2e.minio-azurite.yml
     secrets: inherit
-  publish:
-    name: Publish Reports
+  merge-reports:
+    name: Merge Reports
     needs: [e2e-tests-fs, e2e-tests-azure, e2e-tests-aws, e2e-tests-mix, e2e-tests-aws-azure]
     runs-on: ubuntu-latests
     steps:
-      - name: output
-        working-directory: tests/smoke/playwright/test-reports
-        run: ls -la
+      - name: Merge Report Artifacts
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: playwright-report
+          pattern: playwright-report-*
+          separate-directories: true
+          delete-merged: true
+  publish:
+    needs: [merge-reports]
+    uses: ./.github/workflows/push-to-gh-pages.yml
+    with:
+      ARTIFACT_ID: playwright-report
+      DEPLOY_TO: playwright-reports/${{ github.ref_name }}/${{ github.run_id }}/
+      COMMIT_MSG: "add HTML report for run-id ${{ github.run_id }}"
