--- a/upload-server/docker-compose.e2e.all.yml
+++ b/upload-server/docker-compose.e2e.all.yml
@@ -38,9 +38,9 @@ services:
     image: mcr.microsoft.com/playwright:v1.48.0-focal
     container_name: playwright-all
     volumes:
-      - ../tests/smoke/playwright:/app
-      - /app/node_modules
-    working_dir: /app
+      - ../tests/smoke/playwright:/playwright
+      - /playwright/node_modules
+    working_dir: /playwright
     environment:
       - CI
       - SERVER_URL=http://upload-server-all:8080
